[metadata]
name = fq
version = 0.1.0
author = Takahiro Sato
author_email = harehare1110@gmail.com
license = MIT
description = SQL query for tsv, csv and json
long_description = file: README.md

[options]
zip_safe = False
install_requires =
  docopt
  pandas
entry_points = file: entry_points.cfg
packages=find:
